--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psutil==7.1.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.23
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
